Alteração no HTML

--- a/public/cadastro-person.html
+++ b/public/cadastro-person.html
@@ -5,39 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de pessoas</title>
-    <style>
-        body {
-            position: relative;
-        }
-
-        .centralizer {
-            left: 50%;
-            position: absolute;
-            transform: translateX(-50%);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-
-    <div class="centralizer">
+    <form novalidate>
         <h1>Cadastro de Pessoas</h1>
-        <p>
-            Preencha os dados desejados de cada pessoa para cadastrar.
-        </p>
-
-        <form novalidate>
-            <h3>Nome:<input id="name" placeholder="Insira um nome" autocomplete="name"></h3>
-            <h3>Data de nascimento:<input id="birth" type="date"></h3>
-            <select id="gender" required>
-                <option value="">Selecione o sexo</option>
-                <option value="f">Feminino</option>
-                <option value="m">Masculino</option>
-            </select>
-            <button>Salvar</button>
-        </form>
-        <p id="message"></p>
-    </div>
+        <h4>Nome:<input id="name" placeholder="Insira um nome" autocomplete="name" class="inputs"></h4>
+        <h4>Data de nascimento:<input id="birth" type="date" class="inputs"></h4><br>
+        <select id="gender" required class="select">
+            <option value="">Selecione o sexo</option>
+            <option value="f">Feminino</option>
+            <option value="m">Masculino</option>
+        </select><br> <br>
+        <button>Cadastrar</button><br><br>
+    </form>
+    <p id="message"></p>
     <script src="cadastro-person.js" type="module"></script>
 </body>
 
