Criação do cadastro de pessoas

--- a/public/cadastro-person.html
+++ b/public/cadastro-person.html
@@ -10,16 +10,17 @@
 
 <body>
     <form novalidate>
+        <a href="index.html" class ="fakeBtn"><img src="img/back.png"></a>
         <h1>Cadastro de Pessoas</h1>
         <h4>Nome:<input id="name" placeholder="Insira um nome" autocomplete="name" class="inputs" required></h4>
         <h4>Data de nascimento:<input id="birth" type="date" class="inputs" required></h4><br>
         <select id="gender" class="select" required>
-            <option value="">Selecione o sexo</option>
-            <option value="f">Feminino</option>
-            <option value="m">Masculino</option>
+            <option value="" style="color: #0f1414" >Selecione o sexo</option>
+            <option value="f" style="color: #0f1414" >Feminino</option>
+            <option value="m" style="color: #0f1414" >Masculino</option>
         </select><br> <br>
         <button>Cadastrar</button><br><br>
-        <p id="message">Bem-vindo ao Cadastro de Pessoas!</p>
+        <p id="message" class="message">Bem-vindo ao Cadastro de Pessoas!</p>
     </form>
     <script src="cadastro-person.js" type="module"></script>
 </body>
