--- a/public/cadastro-documentos.html
+++ b/public/cadastro-documentos.html
@@ -31,7 +31,11 @@
         <input id="issn" placeholder="Digite o código issn:" class="inputs_doc">
         <input id="issue" placeholder="Digite a issue:" class="inputs_doc">
         <button id="btnDoc" class="btn_doc">Cadastrar</button>
-        <p id='message' class="message">Cadastre seus livros ou periódicos aqui!</p>
+        <p id='message' class="message">Cadastre ou pesquise um livro ou periódico aqui!</p>
+        <input id="filterBook" placeholder="Procure um livro:" class="inputs_doc">
+        <input id="filterPer" placeholder="Procure um Periódico:" class="inputs_doc">
+        <button id="limparPesquisa" class="btnClear">Limpar Pesquisa</button>
+        <table></table>
     </form>
 
     <script src="cadastro-documentos.js" type="module"></script>
