--- a/public/cadastro-person.html
+++ b/public/cadastro-person.html
@@ -19,8 +19,14 @@
             <option value="f" style="color: #0f1414" >Feminino</option>
             <option value="m" style="color: #0f1414" >Masculino</option>
         </select><br> <br>
-        <button>Cadastrar</button><br><br>
+        <button id="btnCad">Cadastrar</button><br><br>
         <p id="message" class="message">Bem-vindo ao Cadastro de Pessoas!</p>
+        <h1>Buscar autores:</h1>
+        <input id="filterPerson" placeholder="Pesquise um autor" class="inputs">
+        <button id='btnClear' class="clear">Limpar</button>
+        <table>
+
+        </table>
     </form>
     <script src="cadastro-person.js" type="module"></script>
 </body>
