Reestruturando projeto em Vite

--- a/src/cadastro-documentos.html
+++ b/src/cadastro-documentos.html
@@ -10,7 +10,7 @@
 
 <body>
     <form>
-        <a href="index.html" class ="fakeBtn"><img src="img/back.png"></a>
+        <a href="../index.html" class ="fakeBtn"><img src="../public/back.png"></a>
         <h1 id="titulo">O que você deseja cadastrar?</h1><br><br>
         <select id="tipo" class="select" required>
             <option value="" style="color: #0f1414">Selecione um opção:</option>
@@ -38,7 +38,7 @@
         <table></table>
     </form>
 
-    <script src="cadastro-documentos.js" type="module"></script>
+    <script src="cadastro-documentos.ts" type="module"></script>
 </body>
 
 </html>
