--- a/src/cadastro-person.html
+++ b/src/cadastro-person.html
@@ -10,25 +10,27 @@
 
 <body>
     <form novalidate>
-        <a href="index.html" class ="fakeBtn"><img src="img/back.png"></a>
-        <h1>Cadastro de Pessoas</h1>
+        <a href="../index.html" class="fakeBtn"><img src="../public/back.png"></a>
+        <h1>Cadastro de Autores</h1>
         <h4>Nome:<input id="name" placeholder="Insira um nome" autocomplete="name" class="inputs" required></h4>
         <h4>Data de nascimento:<input id="birth" type="date" class="inputs" required></h4><br>
         <select id="gender" class="select" required>
-            <option value="" style="color: #0f1414" >Selecione o sexo</option>
-            <option value="f" style="color: #0f1414" >Feminino</option>
-            <option value="m" style="color: #0f1414" >Masculino</option>
+            <option value="" style="color: #0f1414">Selecione o sexo</option>
+            <option value="f" style="color: #0f1414">Feminino</option>
+            <option value="m" style="color: #0f1414">Masculino</option>
         </select><br> <br>
         <button id="btnCad">Cadastrar</button><br><br>
-        <p id="message" class="message">Bem-vindo ao Cadastro de Pessoas!</p>
+        <p id="message" class="message">Bem-vindo ao Cadastro de Autores!</p>
         <h1>Buscar autores:</h1>
         <input id="filterPerson" placeholder="Pesquise um autor" class="inputs">
-        <button id='btnClear' class="clear">Limpar</button>
+        <button id='btnClear' class="clear">Limpar Pesquisa</button>
         <table>
 
         </table>
+
+
     </form>
-    <script src="cadastro-person.js" type="module"></script>
+    <script src="cadastro-person.ts" type="module"></script>
 </body>
 
 </html>
